// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render a different name, prompt, and beta tag if provided 1`] = `
<div>
  <EuiTitle>
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": "test index pattern",
          }
        }
      />
       
      <EuiBetaBadge
        label="Beta"
      />
    </h1>
  </EuiTitle>
  <EuiSpacer
    size="s"
  />
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="Kibana uses {helpLink} to retrieve data from Elasticsearch indices for things like visualizations."
        id="kbn.management.createIndexPatternLabel"
        values={
          Object {
            "helpLink": <ForwardRef
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="index patterns"
                id="kbn.management.createIndexPattern.emptyStateLabel.indexPatternText"
                values={Object {}}
              />
              <EuiIcon
                className="eui-alignTop"
                size="s"
                type="questionInCircle"
              />
            </ForwardRef>,
          }
        }
      />
    </p>
  </EuiText>
  <EuiSpacer
    size="m"
  />
  <div>
    Test prompt
  </div>
</div>
`;

exports[`Header should render normally 1`] = `
<div>
  <EuiTitle>
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": "test index pattern",
          }
        }
      />
    </h1>
  </EuiTitle>
  <EuiSpacer
    size="s"
  />
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="Kibana uses {helpLink} to retrieve data from Elasticsearch indices for things like visualizations."
        id="kbn.management.createIndexPatternLabel"
        values={
          Object {
            "helpLink": <ForwardRef
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="index patterns"
                id="kbn.management.createIndexPattern.emptyStateLabel.indexPatternText"
                values={Object {}}
              />
              <EuiIcon
                className="eui-alignTop"
                size="s"
                type="questionInCircle"
              />
            </ForwardRef>,
          }
        }
      />
    </p>
  </EuiText>
</div>
`;

exports[`Header should render without including system indices 1`] = `
<div>
  <EuiTitle>
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": "test index pattern",
          }
        }
      />
    </h1>
  </EuiTitle>
  <EuiSpacer
    size="s"
  />
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="Kibana uses {helpLink} to retrieve data from Elasticsearch indices for things like visualizations."
        id="kbn.management.createIndexPatternLabel"
        values={
          Object {
            "helpLink": <ForwardRef
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="index patterns"
                id="kbn.management.createIndexPattern.emptyStateLabel.indexPatternText"
                values={Object {}}
              />
              <EuiIcon
                className="eui-alignTop"
                size="s"
                type="questionInCircle"
              />
            </ForwardRef>,
          }
        }
      />
    </p>
  </EuiText>
</div>
`;
